--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <style>
       body{
-        background-color: 
+        background-color: #3C7CD3
       }
     </style>
   </head>
@@ -16,10 +16,10 @@
   
 
 
-    <a href="{{url_for('singup')}}"> Sing up </a>
+    <center><button><a href="{{url_for('singup')}}"> Sing up </a></button>
     <br>
-    <a href="{{url_for('login')}}""> Log in </a>
-		<p></p>
+    <button><a href="{{url_for('login')}}""> Log in </a></button>
+		<p></p></center>
 
 
 
@@ -29,7 +29,7 @@
   </body>
   <style>
     body{
-        background: blue;
+        background: ;
     }
     </style>
 </html>
