--- a/templates/home.html
+++ b/templates/home.html
@@ -11,13 +11,13 @@
   </head>
   <body>
 
-    <h1> Hello User </h1>
+    <center><h1> Hello User </h1></center>
 
   
 
 
     <center><button><a href="{{url_for('singup')}}"> Sing up </a></button>
-    <br>
+    <br><br>
     <button><a href="{{url_for('login')}}""> Log in </a></button>
 		<p></p></center>
 
