--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,13 @@
     <title></title>
 
     <link rel="stylesheet" href="style.css">
-
+    <style>
+      body{
+        background-color: #3C7CD3
+      }
+    </style>
+  </head>
+  <body>
   </head>
   <body>
 
