--- a/templates/idea.html
+++ b/templates/idea.html
@@ -26,7 +26,7 @@
     <div class="x1">
         <div class="cloud">
           <span class="cloud-text"> 
-            Idea: {{item.wyi}} 
+            Idea: {{item.idea}} 
           </span>
         </div>
     </div>
