--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
   <head>
     <title></title>
 
-    <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="{{ url_for('static', filename='login.css') }}">
     <style>
       body{
         background-color: #3C7CD3
@@ -12,18 +12,26 @@
   <body>
   </head>
   <body>
+<div class="login">
+  <div class="heading">
+    <h2>Log in</h2>
+    <form action="#">
 
-    <h1> log in </h1>
-		<form action='/login' method="POST">
-		<input type="text" name="username" placeholder="Username"/>
-		<input type="text" name="password" placeholder="Password"  />
-		<input type="submit" name="submit"/>
-		</form>
+      <div class="input-group input-group-lg">
+        <span class="input-group-addon"><i class="fa fa-user"></i></span>
+        <input type="text" class="form-control" placeholder="Username or email">
+          </div>
+
+        <div class="input-group input-group-lg">
+          <span class="input-group-addon"><i class="fa fa-lock"></i></span>
+          <input type="password" class="form-control" placeholder="Password">
+        </div>
+
+        <button type="submit" class="float">Login</button>
+       </form>
+ 		</div>
+ </div>
 
   </body>
   <style>
-    body{
-        background: blue;
-    }
-    </style>
 </html>
