--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
 <div class="login">
   <div class="heading">
     <h2>Log in</h2>
-    <form action="#">
+    <form action="/login">
 
       <div class="input-group input-group-lg">
         <span class="input-group-addon"><i class="fa fa-user"></i></span>
