--- a/templates/singup.html
+++ b/templates/singup.html
@@ -2,7 +2,7 @@
   <head>
     <title></title>
 
-    <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="{{ url_for('static', filename='sing.css') }}">
     <style>
       body{
         background-color: #3C7CD3
@@ -13,13 +13,25 @@
   </head>
   <body>
 
-    <h1> Sing up </h1>
-		<form action='/singup' method="POST">
-		<input type="text" name="username" placeholder="Username"/>
-		<input type="text" name="password" placeholder="Password"  />
-		<input type="submit" name="submit"/>
-		</form>
+<div class="login">
+  <div class="heading">
+    <h2>Log in</h2>
+    <form action="/singup">
 
+      <div class="input-group input-group-lg">
+        <span class="input-group-addon"><i class="fa fa-user"></i></span>
+        <input type="text" class="form-control" placeholder="Username">
+          </div>
+
+        <div class="input-group input-group-lg">
+          <span class="input-group-addon"><i class="fa fa-lock"></i></span>
+          <input type="password" class="form-control" placeholder="Password">
+        </div>
+
+        <button type="submit" class="float">Singup</button>
+       </form>
+ 		</div>
+ </div>
   </body>
 
 </html>
