--- a/templates/singup.html
+++ b/templates/singup.html
@@ -15,20 +15,20 @@
 
 <div class="login">
   <div class="heading">
-    <h2>Log in</h2>
-    <form action="/singup">
+    <h2>Sing up</h2>
+    <form action="/singup" method="post" >
 
       <div class="input-group input-group-lg">
         <span class="input-group-addon"><i class="fa fa-user"></i></span>
-        <input type="text" class="form-control" placeholder="Username">
+        <input type="text" class="form-control" placeholder="Username" name="username">
           </div>
 
         <div class="input-group input-group-lg">
           <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-          <input type="password" class="form-control" placeholder="Password">
+          <input type="password" class="form-control" placeholder="Password" name="password">
         </div>
 
-        <button type="submit" class="float">Singup</button>
+        <button type="submit" class="float">Sing up</button>
        </form>
  		</div>
  </div>
